--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,7 @@
   src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
   font-weight: 700;
 }
-/* General 
+/* General & Variables 
  * ========================================================================== */
 :root {
   --cd-btn: #011c37;
@@ -54,6 +54,49 @@ h1:first-child {
   border-top: none;
   width: 90%;
   margin: 0 auto;
+}
+
+.form__group {
+  margin-bottom: 10px;
+}
+.form__group label {
+  padding: 10px 0 0 25px;
+  display: inline-block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.form__group input {
+  border: 2px solid #c099d8;
+  border-radius: 100rem;
+  color: #6300a0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  outline: none;
+  padding: 0.5rem 1.5rem;
+  width: 70%;
+  transition: background-color 500ms;
+}
+.form__group input:focus {
+  border: 2px solid #6300a0;
+}
+.form__group input:not(:focus):invalid {
+  color: #fff;
+  border: 2px solid #b20a37;
+  background: #b20a37;
+}
+
+.btn {
+  background: #011c37;
+  font-size: 1.5rem;
+  color: wheat;
+  cursor: pointer;
+  padding: 0.43rem 1.5rem;
+  border-radius: 10rem;
+  transition: transform 0.3s;
+}
+.btn:hover {
+  transform: scale(1.15);
 }
 
 /*# sourceMappingURL=app.css.map */
