--- a/public/scss/partials/_vars.scss
+++ b/public/scss/partials/_vars.scss
@@ -3,3 +3,10 @@ $cd-box: #c099d8;
 $cd-txt--invalid: #fff;
 $cd-danger: #b20a37;
 $cd-primary:#011c37;
+
+/**
+Button
+================================*/
+$cd-btn-start: rgba(1, 28, 55, 0);
+$cd-btn-end: rgba(1, 28, 55, 1);
+$cd-btn:#011c37;
