--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -1,6 +1,8 @@
 @import 'partials/fonts';
 @import 'partials/vars';
 
+@import 'partials/transform';
+
 /* General & Variables 
  * ========================================================================== */
 :root {
